--- a/golang/justfile
+++ b/golang/justfile
@@ -1,3 +1,6 @@
+DOCKER_IMAGE := "daruzero/group-chat-go-"
+DOCKER_TAG := "latest"
+
 # Print help
 @help:
 	just --list
@@ -17,3 +20,14 @@
 @fmt:
 	go fmt ./...
 	fieldalignment -fix ./...
+
+# Build and push the target docker image with specified the tag (defaults to latest).
+@docker target tag=DOCKER_TAG: (docker-build target) (docker-push target)
+
+# Build target docker image with specified the tag (defaults to latest).
+@docker-build target tag=DOCKER_TAG:
+	docker build -t {{DOCKER_IMAGE}}{{target}}:{{tag}} -f build/{{target}}.Dockerfile .
+
+# Push target docker image with specified the tag (defaults to latest).
+@docker-push target tag=DOCKER_TAG:
+	docker push {{DOCKER_IMAGE}}{{target}}:{{tag}}
